--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -5,6 +5,7 @@ imports:
     - { resource: "@VRPlayAdminBundle/Resources/config/services.yml" }
     - { resource: "@VRPlayBundle/Resources/config/services.yml" }
     - { resource: "@VRPlayAuditBundle/Resources/config/services.yml" }
+    - { resource: "@VRCustomUserBundle/Resources/config/services.yml" }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
@@ -141,6 +142,7 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
 fos_user:
     db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
     firewall_name: main
