--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ docs
 # Cache and logs (Symfony3)
 /var/cache/*
 /var/logs/*
+/var/sessions/*
 !var/cache/.gitkeep
 !var/logs/.gitkeep
 
@@ -71,5 +72,7 @@ project
 *.db
 *.tmproj
 *.sublime-project
+*.sublime-workspace
 .idea
 *.idea/*
+info.php
