--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -50,6 +50,14 @@ twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
 
+    exception_controller:  twig.controller.exception:showAction
+
+    form_themes:
+
+        # Bootstrap:
+        - bootstrap_3_layout.html.twig
+        - bootstrap_3_horizontal_layout.html.twig
+
 # Doctrine Configuration
 # doctrine:
 #     dbal:
